# Documentation-Q-and-A

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/db/62a0ba2f-abb3-4434-8dbc-125be114961b/: index_metadata.pickle
app/ingestion/: loader.py  vector_store.py
app/retrieval/: retreiver.py
